# component-intel

./: .env.example  .gitignore  README.md  mpns.txt  pyproject.toml  requirements.txt  streamlit_app.py
scripts/: find_substitutes.py  inspect_part.py  probe_oemsecrets.py  run_m1_harness.py  try_search.py
src/cie/: config.py
src/cie/cache/: store.py
src/cie/compliance/: models.py  scorer.py
src/cie/ingestion/: classify.py  datasheets.py  leadtime.py  mpn.py  pipeline.py
src/cie/ingestion/clients/: arrow.py  avnet.py  base.py  common.py  digikey.py  mouser.py  oemsecrets.py
src/cie/lifecycle/: datasheet_age.py  history.py  models.py  scorer.py
src/cie/manufacturer/: knowledge.json  knowledge.py  models.py  observations.py  scorer.py
src/cie/models/: enums.py  part.py
src/cie/substitution/: engine.py  fit.py  fit_rules.json  models.py
